feat: improve public workspace discovery